syntax = "proto3";

option csharp_namespace = "AspNetCore.GrpcServiceDemo";

package test;

// The greeting service definition.
service Test {
  // Sends a greeting
  rpc TestMethod (TestRequest) returns (TestReply);
}

// The request message containing the user's name.
message TestRequest {
  string name = 1;
}

// The response message containing the greetings.
message TestReply {
  string message = 1;
}
